# failwith

./: .failwith.example.toml  .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  publish.yml
src/failwith/: __init__.py
src/failwith/core/: analyzer.py  formatter.py  interceptor.py
src/failwith/data/: import_map.py  port_map.py
src/failwith/plugins/: __init__.py
src/failwith/suggestions/: __init__.py  base.py  connection.py  filesystem.py  imports.py  misc.py  types.py
src/failwith/utils/: env.py  fs.py  fuzzy.py
tests/: test_failwith.py
